Fix: backdrop blur not working on ios

--- a/sources/js/components/Header/Header.module.css
+++ b/sources/js/components/Header/Header.module.css
@@ -26,6 +26,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--header-background-color);
+    -webkit-backdrop-filter: var(--header-backdrop-filter, none);
     backdrop-filter: var(--header-backdrop-filter, none);
     z-index: -1;
 }
@@ -134,6 +135,7 @@
         display: none;
     }
     .header::before {
+        -webkit-backdrop-filter: blur(28.5px);
         backdrop-filter: blur(28.5px);
     }
     .header::after {
@@ -151,6 +153,7 @@
         display: none;
     }
     .header::before {
+        -webkit-backdrop-filter: blur(28.5px);
         backdrop-filter: blur(28.5px);
     }
     .header::after {
