--- a/sources/js/components/Layouts/Layout.module.css
+++ b/sources/js/components/Layouts/Layout.module.css
@@ -16,5 +16,9 @@
     width: 100vw;
     height: var(--100vh);
     background-color: rgba(0, 0, 0, 0);
+    -webkit-backdrop-filter: var(
+        --general-body-background-backdrop-filter,
+        none
+    );
     backdrop-filter: var(--general-body-background-backdrop-filter, none);
 }
